@@ -1,3 +1,4 @@
+Version 61 	 2010-08-22 	 Added testcases for password reset and greetings 
 Version 60 	 2010-08-22 	 Greetings on Birthdays. Not tested 
 Version 59 	 2010-08-22 	 Added Password Reset. Not tested 
 Version 58 	 2010-08-22 	 Testing related changes 
